Fix buy building bug on mobile + fix alliance buff res price

--- a/client/src/components/Card.module.scss
+++ b/client/src/components/Card.module.scss
@@ -93,6 +93,7 @@ $accent-color: lime;
     margin: 0.5em auto;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
     letter-spacing: 0.05em;
+    user-select: none;
 
     &:disabled {
       opacity: 0.4;
